--- a/exercises/lab_01_deep_research/pyproject.toml
+++ b/exercises/lab_01_deep_research/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "streamlit>=1.52.2",
     "tabulate>=0.9.0",
+    "mlflow>=2.14.0",
 ]
 
 [project.scripts]
