--- a/exercises/lab_02_mcp_advanced/pyproject.toml
+++ b/exercises/lab_02_mcp_advanced/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
     "uvicorn>=0.40.0",
+    "mlflow>=2.14.0",
 ]
 
 [project.scripts]
