--- a/exercises/lab_02_mcp_advanced/pyproject.toml
+++ b/exercises/lab_02_mcp_advanced/pyproject.toml
@@ -23,11 +23,16 @@ dependencies = [
     "requests>=2.32.5",
     "uvicorn>=0.40.0",
     "mlflow>=2.14.0",
+    "duckduckgo-search>=8.1.1",
+    "helium>=5.1.2",
+    "langchain-community>=0.4.1",
+    "ddgs>=9.10.0",
 ]
 
 [project.scripts]
 coding-agent = "mcp_agent.coding_agent.main:main"
 deep-agent = "mcp_agent.deep_agent.main:main"
+deep-agent-vision = "mcp_agent.deep_agent_vision.main:main"
 
 [dependency-groups]
 dev = [
